--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "lark>=1.2.2",
+    "z3-solver>=4.15.1.0",
 ]
 
 [build-system]
