--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "lark>=1.2.2",
+    "pyvmt>=0.0.4",
     "typer>=0.16.0",
     "z3-solver>=4.15.1.0",
 ]
@@ -19,6 +20,9 @@ dev = [
     "mypy>=1.15.0",
     "pytest>=8.3.5",
 ]
+
+[tool.uv.sources]
+pyvmt = { path = "vendor/pyvmt-0.0.4-py3-none-any.whl" }
 
 [project.scripts]
 hoapp = "hoapp.cli:main"
