Add hypothesis as a dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "hypothesis>=6.138.2",
     "mypy>=1.15.0",
     "pytest>=8.3.5",
 ]
