--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "hoapp"
 version = "0.2.0"
 description = "Add your description here"
+license = "MIT"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
