--- a/.github/workflows/mypy_pytest.yml
+++ b/.github/workflows/mypy_pytest.yml
@@ -26,7 +26,7 @@ jobs:
           enable-cache: true
 
       - name: Install the project
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --all-extras --dev
 
       - name: Run type checker
         run: uv run mypy .
